# aw-notify-rs

./: Cargo.toml  README.md  config.example.toml
crates/aw-notify-client/: Cargo.toml
crates/aw-notify-client/src/: lib.rs
examples/: notify_client.rs
src/: main.rs
