[package]
name = "aw-notify-client"
version = "0.1.0"
edition = "2021"
description = "Lightweight client for sending desktop notifications through aw-notify's local HTTP API"
authors = ["ActivityWatch Contributors"]
repository = "https://github.com/ActivityWatch/aw-notify-rs"
license = "MPL-2.0"
keywords = ["activitywatch", "notifications", "client"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Plain-HTTP only (localhost): default-features = false drops the TLS backends
# (no hyper/openssl/rustls), keeping the dependency footprint tiny for watchers.
ureq = { version = "2", default-features = false }
